# line-following-robot

./: .gitignore  README.md  a.py
src/aruco_marker_pose_estimation/: package.xml  setup.cfg  setup.py
src/aruco_marker_pose_estimation/aruco_marker_pose_estimation/: marker_estimation.py
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/bumperbot_controller/: simple_controller.py
src/bumperbot_controller/config/: bumperbot_controller.yaml  bumperbot_controllers.yaml
src/bumperbot_controller/include/bumperbot_controller/: bumperbot_controller.hpp
src/bumperbot_controller/launch/: controller.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py  display_rviz.launch.py  gazebo.launch.py  sample.launch.py
src/robot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro  camera.xacro  common_properties.xacro
src/robot_navigation/: package.xml  setup.py
src/robot_navigation/constants/: constants.py
src/robot_navigation/robot_navigation/: robot_navigation.py
src/self_driving_pkg/: CMakeLists.txt  package.xml
src/self_driving_pkg/launch/: display_gazebo_world.launch.py  display_rviz_gazebo.launch.py  world_gazebo.launch.py
src/self_driving_pkg/models/halftrack/: model.config  model.sdf
src/self_driving_pkg/models/marker0/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
src/self_driving_pkg/models/marker1/: model.config  (+1 more)
src/self_driving_pkg/worlds/: a.world  b.world  lane_following_world.world  line_aruco.world
(+15 files in other folders)
